k8s/99-deployment-bad-port.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-bad
  namespace: hello
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-bad
  template:
    metadata:
      labels:
        app: web-bad
    spec:
      containers:
        - name: nginx
          image: nginx:1.27-alpine
          ports:
            - containerPort: 80   # WRONG
          readinessProbe:
            httpGet: { path: /, port: 80 }  # WRONG
          livenessProbe:
            httpGet: { path: /, port: 80 }  # WRONG
