k8s/20-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: hello
spec:
  selector:
    app: web
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: ClusterIP
